--- a/rgamesync-config/Cargo.toml
+++ b/rgamesync-config/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 directories = "6.0.0"
+glob = "0.3.2"
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.12"
 toml = "0.9.2"
